<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/container_default.opaque"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp"
    android:clickable="true"
    android:orientation="vertical"
    tools:ignore="UnusedAttribute">

    <TextView
        style="@style/basic_view.header"
        android:text="@string/text_sort_title"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <RadioButton
            android:id="@+id/fragment_filter_price_radio_button"
            android:text="@string/sort_price"
            style="@style/basic_view.radio_button" />

        <RadioButton
            android:id="@+id/fragment_filter_alphabetical_radio_button"
            android:text="@string/sort_alphabetically"
            style="@style/basic_view.radio_button" />

        <RadioButton
            android:id="@+id/fragment_filter_condition_radio_button"
            android:text="@string/sort_condition"
            style="@style/basic_view.radio_button" />

    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button_general"
        android:text="@android:string/ok"
        android:textColor="@android:color/white"
        android:id="@+id/fragment_filter_button_ok"
        style="@style/Widget.AppCompat.ButtonBar"/>

</LinearLayout>