<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:id="@+id/fragment_product_main_container"
        android:background="@color/transparent_white_80">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.handler.mobile.android.fairmondo.presentation.views.CustomNetworkImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/fairmondo"
                android:id="@+id/fragment_product_image_view" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_product_content_container"
                android:layout_below="@id/fragment_product_image_view"
                tools:context="android.mobile.handler.de.fairmondo.ui.fragments.ProductFragment"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:minHeight="50dp"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:id="@+id/fragment_product_title"
                    android:lines="2" />


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/fragment_product_description"
                    android:foreground="?android:selectableItemBackground"
                    android:layout_below="@id/fragment_product_title"
                    android:id="@+id/fragment_product_button_description"/>


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_product_terms"
                    android:foreground="?android:selectableItemBackground"
                    android:layout_below="@id/fragment_product_button_description"
                    android:id="@+id/fragment_product_button_terms"/>


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/fragment_product_donation"
                    android:foreground="?android:selectableItemBackground"
                    android:layout_below="@id/fragment_product_button_terms"
                    android:id="@+id/fragment_product_button_fair_percent"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_product_transport"
                    android:foreground="?android:selectableItemBackground"
                    android:layout_below="@id/fragment_product_button_fair_percent"
                    android:id="@+id/fragment_product_button_transport"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_product_payment"
                    android:foreground="?android:selectableItemBackground"
                    android:layout_below="@id/fragment_product_button_transport"
                    android:id="@+id/fragment_product_button_payment"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/secondary_text_light"
                    android:layout_below="@id/fragment_product_button_transport"
                    android:gravity="end"
                    android:padding="15dp"
                    android:id="@+id/fragment_product_donation"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/secondary_text_light"
                    android:layout_below="@id/fragment_product_donation"
                    android:textSize="30sp"
                    android:gravity="end"
                    android:paddingTop="15dp"
                    android:paddingRight="15dp"
                    android:paddingEnd="15dp"
                    android:id="@+id/fragment_product_price"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/secondary_text_light"
                    android:layout_below="@id/fragment_product_price"
                    android:text="@string/fragment_product_vat"
                    android:gravity="end"
                    android:paddingEnd="15dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="15dp"
                    android:id="@+id/fragment_product_price_vat"/>


            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <com.software.shell.fab.ActionButton
            android:id="@+id/fragment_product_button_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            fab:image="@drawable/fab_plus_icon"/>

    </RelativeLayout>
</RelativeLayout>
